// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pods Resolver Correctly Resolves Pod log query 1`] = `
Object {
  "data": Object {
    "logs": "{\\"kind\\":\\"Status\\",\\"apiVersion\\":\\"v1\\",\\"metadata\\":{},\\"status\\":\\"Failure\\",\\"message\\":\\"managedclusterinfos.internal.open-cluster-management.io \\\\\\"cluster1\\\\\\" not found\\",\\"reason\\":\\"NotFound\\",\\"details\\":{\\"name\\":\\"cluster1\\",\\"group\\":\\"internal.open-cluster-management.io\\",\\"kind\\":\\"managedclusterinfos\\"},\\"code\\":404}
",
  },
}
`;

exports[`Pods Resolver Correctly Resolves Pods Query 1`] = `
Object {
  "data": Object {
    "pods": Array [],
  },
}
`;
